Update Django to 1.5.

--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h2. Installation
 
 This is a standard GeoDjango project. Install PostgreSQL and GeoDjango - I just "followed the instructions":http://docs.djangoproject.com/en/dev/ref/contrib/gis/install/.
 
-One thing - I'm on Debian lenny, and not only is the PostGIS that is installed missing SRID 900913, as the GeoDjango docs tell you, but SRID 27700 (British National Grid, and therefore quite important in this application) is incorrect.  After you've installed and got a PostGIS template, log in to it and update the proj4text column of SRID 27700 to include +datum=OSGB36.
+Note that you should check the SRIDs - when I originally wrote this, not only was the Debian lenny PostGIS missing SRID 900913, as the GeoDjango docs tell you, but SRID 27700 (British National Grid, and therefore quite important in this application) was incorrect. After you've installed and got a PostGIS template, log in to it and update the proj4text column of SRID 27700 to include +datum=OSGB36 if it's not already there.
 
 Download the relevant OS data from "their website":http://www.ordnancesurvey.co.uk/oswebsite/opendata (or "mySociety's mirror":http://parlvid.mysociety.org:81/os/) - you want one or more of the 1:50k Gazetteer (place names), Code-Point Open (postcodes), and OS Locator (street names).
 
@@ -14,18 +14,27 @@ cat postcodes/*.csv | ./manage.py import_postcodes
 
 Make sure DEBUG is False, otherwise you'll soon run out of memory as it tries to remember all the SQL queries made.
 
-That should be all you need to do - start up the dev web server, or whatever. The relevant bits of my Apache VirtualHost, for what it's worth, are as follows:
+That should be all you need to do - start up the dev web server, or whatever.  The relevant bits of my nginx, for what it's worth, are as follows:
 
-bc. <VirtualHost>
-    Alias /static/ [...]/project/static/
-    WSGIDaemonProcess gazetteer processes=5 threads=1
-    WSGIProcessGroup gazetteer
-    WSGIScriptAlias / [...]/project/apache/django.wsgi
-</VirtualHost>
+bc. upstream gazetteer_server {
+    server unix:/tmp/gunicorn-gazetteer.sock fail_timeout=0;
+}
+server {
+    root .../web;
+    location / {
+        try_files $uri @proxy_to_app;
+    }
+    location @proxy_to_app {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://gazetteer_server;
+    }
+}
+
+p. I use Debian's gunicorn, so just have to specify a python and environment.PYTHONPATH in an /etc/gunicorn.d/ file.
 
 h2. Todo
-
-* I've tried to make this a standalone Django app, but the CSS is currently in the project, not the app.  Other than that (which someone is welcome to fix), it should hopefully just slot in to any Django project; but I've probably done something wrong.
 
 * The postcode and reverse geocoding work well, as they're quite simple; the place and street name lookups could certainly be improved upon.
 
